tests/snapshot/error/stack_trace/module_top_level_error.js
function foo() {
  throw new Error('test');
}

foo();