tests/snapshot/error/stack_trace/module_top_level_error.exp
Error: test
  ┌ stack_trace/module_top_level_error.js:2:9
  |
2 |   throw new Error('test');
  |         ^
Stack trace:
  at foo (stack_trace/module_top_level_error.js:2:9)
  at <module> (stack_trace/module_top_level_error.js:5:1)